--- a/Bootcamp_Full-Stack/semana-6 copy/proyecto/Componentes/Footer.html
+++ b/Bootcamp_Full-Stack/semana-6 copy/proyecto/Componentes/Footer.html
@@ -11,7 +11,7 @@
             </div>
             <div class="col-lg-3 col-md-6">
                 <p class="mb-3" style="font-size: 14px; color: #e9ecef;">Escríbenos al WhatsApp: <br/>
-                    <img src="/Bootcamp_Full-Stack/semana-6/proyecto/imagenes/iconos/whatsapp.png" style="width: 15px; height: 15px;"> 
+                    <img src="../../imagenes/iconos/whatsapp.png" style="width: 15px; height: 15px;"> 
                     <a href="https://wa.me/54911998877661" target="_blank" style="color: #ffffff;">+54911 998877661</a>
                 </p>
             </div>
