--- a/Bootcamp_Full-Stack/semana-6 copy/proyecto/Componentes/NavBar.html
+++ b/Bootcamp_Full-Stack/semana-6 copy/proyecto/Componentes/NavBar.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg  bg-primary" data-bs-theme="dark">
     <div class="container">
-        <a class="navbar-brand" href="/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Home/Home.html">
-            <img src="/Bootcamp_Full-Stack/semana-6/proyecto/imagenes/iconos/logo.png" alt="Logo" class="logo-img">
+        <a class="navbar-brand" href="../../Pages/Home/Home.html">
+            <img src="../../imagenes/iconos/logo.png" alt="Logo" class="logo-img">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -17,7 +17,7 @@
             </ul>
             <ul class="navbar-nav  navbar-shopping" >
                 <li class="nav-item">
-                    <img src="/Bootcamp_Full-Stack/semana-6/proyecto/imagenes/iconos/shopping.png" class="shopping-img" alt="Shopping Icon">
+                    <img src="../../imagenes/iconos/shopping.png" class="shopping-img" alt="Shopping Icon">
                     <a class="nav-link ver-compra" href="#">Ver compra</a>
                 </li>
             </ul>
