--- a/Bootcamp_Full-Stack/semana-6 copy/proyecto/Pages/Categoria-Carne/Test.html
+++ b/Bootcamp_Full-Stack/semana-6 copy/proyecto/Pages/Categoria-Carne/Test.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Supermercado La Estancia</title>
-    <link rel="icon" href="../../imagenes/iconos/logo.png" type="image/png" >
-
-    <link rel="stylesheet" href="../Carnes/Carnes.css"> 
-    <link rel="stylesheet" href="../../Global.css">
+    <link rel="icon" href="../../imagenes/iconos/logo.png" type="image/png">
+    
+    <link rel="stylesheet" href="./Carnes.css"> 
+    <link rel="stylesheet" href="../Global.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"> 
-    <link href="../../../Css/bootstrap.min.css" rel="stylesheet"> 
+    <link href="../../Css/bootstrap.min.css" rel="stylesheet"> 
+    <script defer src="./Carnes.js"></script>
 </head>
 
 <body>
@@ -19,7 +20,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12 py-4 responsive-text d-flex">
-                <a href="../Categorias.html"  class="text-primary text-decoration-none" >Categorias</a>
+                <a href="../Categorias/Categorias.html"  class="text-primary text-decoration-none" >Categorias</a>
                 <p class="mb-0 mx-2">/Carnes</p>
             </div>
         </div>
@@ -37,7 +38,7 @@
         </div>
         <div class="row border border-1 border-secondary">
             <div class="col-12 col-sm-12 col-md-3 bg-secondary p-4 position-relative">
-                <img src="../../../imagenes/categorías/carnes/lomo.jpg" class="img-fluid rounded-5 img-producto" alt="Imagen de Carne">
+                <img src="../../imagenes/categorías/carnes/lomo.jpg" class="img-fluid rounded-5 img-producto" alt="Imagen de Carne">
                 <h4 class="Text-Ofertas">PRODUCTO EN OFERTA</h4>
             </div> 
             <div class="col-12 col-sm-12 col-md-4 d-flex align-items-center justify-content-center border-custom border-1 border-secondary">
@@ -57,7 +58,7 @@
                 </div>
                 <div class="row d-flex align-items-center h-25 p-2">
                     <div class="col-6 position-relative"> 
-                        <img src="../../../imagenes/iconos/oferta.png" class="img-ofertas" alt="">
+                        <img src="../../imagenes/iconos/oferta.png" class="img-ofertas" alt="">
                         <p class="price-ofertas">20%</p> 
                     </div>
                     <div class="col-6">
@@ -67,7 +68,7 @@
                 <div class="row d-flex align-items-center h-25 p-2">
                     <div class="col-12">
                         <button class="bg-primary w-100 d-flex align-items-center justify-content-start">
-                            <img src="../../../imagenes/iconos/shopping.png" width="25px" height="25px" class="me-2">
+                            <img src="../../imagenes/iconos/shopping.png" width="25px" height="25px" class="me-2">
                             <p class="mb-0 flex-grow-1 text-center text-white ">Agregar al Carrito</p>
                         </button>
                     </div>
@@ -106,7 +107,7 @@
         </div>
         <div class="row border border-1 border-secondary">
             <div class="col-12 col-sm-12 col-md-3 bg-secondary p-4">
-                <img src="../../../imagenes/categorías/carnes/lomo.jpg" class="img-fluid rounded-5" alt="Imagen de Carne">
+                <img src="../../imagenes/categorías/carnes/lomo.jpg" class="img-fluid rounded-5" alt="Imagen de Carne">
             </div> 
             <div class="col-12 col-sm-12 col-md-4 d-flex align-items-center justify-content-center border-end border-1 border-secondary">
                 <div class=" p-5 text-center ">
@@ -125,7 +126,7 @@
                 </div>
                 <div class="row d-flex align-items-center h-25 p-2">
                     <div class="col-6">
-                        <img src="../../../imagenes/iconos/oferta.png" class="" alt="">
+                        <img src="../../imagenes/iconos/oferta.png" class="" alt="">
                     </div>
                     <div class="col-6">
                         <p class="fw-bold">$8500</p>
@@ -134,7 +135,7 @@
                 <div class="row d-flex align-items-center h-25 p-2">
                     <div class="col-12">
                         <button class="bg-primary w-100 d-flex align-items-center justify-content-start">
-                            <img src="../../../imagenes/iconos/shopping.png" width="25px" height="25px" class="me-2">
+                            <img src="../../imagenes/iconos/shopping.png" width="25px" height="25px" class="me-2">
                             <p class="mb-0 flex-grow-1 text-center text-white ">Agregar al Carrito</p>
                         </button>
                     </div>
@@ -161,7 +162,7 @@
     </button>
      -->
 
-     <script src="../../../Componentes/NavBarS.js" defer></script>
+     <script src="../../../proyecto/Componentes/NavBarS.js" defer> </script>
 
 </body>
 </html>
