--- a/Bootcamp_Full-Stack/semana-6 copy/proyecto/Pages/Categorias/Categorias.html
+++ b/Bootcamp_Full-Stack/semana-6 copy/proyecto/Pages/Categorias/Categorias.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Supermercado La Estancia</title>
-    <link rel="icon" href="/Bootcamp_Full-Stack/semana-6/proyecto/imagenes/iconos/logo.png" type="image/png">
+    <link rel="icon" href="../../imagenes/iconos/logo.png" type="image/png" >
 
-    <link rel="stylesheet" href="/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Home/Home.css"> 
-    <link rel="stylesheet" href="/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Global.css">
+    <link rel="stylesheet" href="Categorias.css"> 
+    <link rel="stylesheet" href="../Global.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"> 
-    <link href="/Bootcamp_Full-Stack/semana-6/proyecto/Css/bootstrap.min.css" rel="stylesheet"> 
+    <link href="../../Css/bootstrap.min.css" rel="stylesheet"> 
 </head>
 
 <body>
@@ -30,11 +30,11 @@
     <div class="container mb-5">
         <div class="row">
             <div class="col-12 col-sm-6 d-flex align-items-stretch mt-2">
-                <a href="/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Categorias/Carnes/Carnes.html" class="text-decoration-none d-flex">
+                <a href="../Categoria-Carne/Carnes.html" class="text-decoration-none d-flex">
                     <div class="card rounded-5 bg-secondary p-3 border border-dark"> 
                         <div class="row">
                             <div class="col-md-4 separador responsive-border"> 
-                                <img src="/Bootcamp_Full-Stack/semana-6/proyecto/imagenes/categorías/carnes.jpg" class="img-fluid rounded-5" alt="Imagen de Carne">
+                                <img src="../../imagenes/categorías/carnes.jpg" class="img-fluid rounded-5" alt="Imagen de Carne">
                             </div>
                             <div class="col-md-8 d-flex align-items-center">
                                 <div class="card-body text-center">
@@ -50,7 +50,7 @@
                     <div class="card rounded-5 bg-secondary p-3 border border-dark"> 
                         <div class="row">
                             <div class="col-md-4 separador responsive-border"> 
-                                <img src="/Bootcamp_Full-Stack/semana-6/proyecto/imagenes/categorías/gaseosas.jpg" class="img-fluid rounded-5" alt="Imagen con botellas de Gaseosas">
+                                <img src="../../imagenes/categorías/gaseosas.jpg" class="img-fluid rounded-5" alt="Imagen con botellas de Gaseosas">
                             </div>
                             <div class="col-md-8 d-flex align-items-center">
                                 <div class="card-body text-center">
@@ -68,7 +68,7 @@
                     <div class="card rounded-5 bg-secondary p-3 border border-dark"> 
                         <div class="row">
                             <div class="col-md-4 separador responsive-border"> 
-                                <img src="/Bootcamp_Full-Stack/semana-6/proyecto/imagenes/categorías/lacteos.jpg" class="img-fluid rounded-5" alt="Imagen con lácteos">
+                                <img src="../../imagenes/categorías/lacteos.jpg" class="img-fluid rounded-5" alt="Imagen con lácteos">
                             </div>
                             <div class="col-md-8 d-flex align-items-center">
                                 <div class="card-body text-center">
@@ -84,7 +84,7 @@
                     <div class="card rounded-5 bg-secondary p-3 border border-dark"> 
                         <div class="row">
                             <div class="col-md-4 separador responsive-border"> 
-                                <img src="/Bootcamp_Full-Stack/semana-6/proyecto/imagenes/categorías/limpieza.jpg" class="img-fluid rounded-5 " alt="Imagen con articulos de limpieza">
+                                <img src="../../imagenes/categorías/limpieza.jpg" class="img-fluid rounded-5 " alt="Imagen con articulos de limpieza">
                             </div>
                             <div class="col-md-8 d-flex align-items-center">
                                 <div class="card-body text-center">
@@ -102,7 +102,7 @@
                     <div class="card rounded-5 bg-secondary p-3 border border-dark"> 
                         <div class="row">
                             <div class="col-md-4 separador responsive-border"> 
-                                <img src="/Bootcamp_Full-Stack/semana-6/proyecto/imagenes/categorías/verduleria.jpg" class="img-fluid rounded-5" alt="Imagen de frutas y verduras">
+                                <img src="../../imagenes/categorías/verduleria.jpg" class="img-fluid rounded-5" alt="Imagen de frutas y verduras">
                             </div>
                             <div class="col-md-8 d-flex align-items-center">
                                 <div class="card-body text-center">
@@ -118,7 +118,7 @@
                     <div class="card rounded-5 bg-secondary p-3 border border-dark"> 
                         <div class="row">
                             <div class="col-md-4 separador responsive-border"> 
-                                <img src="/Bootcamp_Full-Stack/semana-6/proyecto/imagenes/categorías/vinos.jpg" class="img-fluid rounded-5" alt="Imagen de botellas de vinos">
+                                <img src="../../imagenes/categorías/vinos.jpg" class="img-fluid rounded-5" alt="Imagen de botellas de vinos">
                             </div>
                             <div class="col-md-8 d-flex align-items-center">
                                 <div class="card-body text-center">
@@ -132,7 +132,7 @@
         </div>
     </div>
 
-    <script src="/Bootcamp_Full-Stack/semana-6/proyecto/Componentes/NavBarS.js" defer> </script>
+    <script src="../../../proyecto/Componentes/NavBarS.js" defer> </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
